Fixed any bug and increase pps ddos catching
