# docs/swagger.yaml
@@ -356,6 +356,39 @@ paths:
       summary: Set config
       tags:
       - Operator
+  /api/config-with-restart-system:
+    put:
+      consumes:
+      - application/json
+      description: Set config with restart system
+      operationId: set-config-with-restart-system
+      parameters:
+      - description: Parameters
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/types.ConfigType'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: updated
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - ApiKeyAuth: []
+      summary: Set config with restart system
+      tags:
+      - Operator
   /api/count-all-session:
     get:
       consumes:
